# jbigkit-py

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi.yml
src/binding/: JbgDecoder.cpp  JbgDecoder.hpp  JbgEncoder.cpp  JbgEncoder.hpp  JbgErrno.cpp  JbgErrno.hpp  JbgFlags.cpp  JbgFlags.hpp  init.cpp  init.hpp  jbig.hpp
tests/: test_JbgDecoder.py  test_JbgEncoder.py
tests/examples/: mx.pbm  xvlogo.pbm
