[metadata]
name = jbigkit-py
version = 2.1.4
description = A Python binding library to jbigkit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hypersine/jbigkit-py

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
python_requires = >=3.6
